...
            <View style={styles.badgeCountIndicator}>
              <Text style={styles.badgeCountText}>{earnedBadgeCount}</Text>
            </View>
          )}
        </TouchableOpacity>
        <TouchableOpacity
          testID="dashboard-settings-button"
          ref={settingsRef}
          style={styles.headerButton}
          onPress={onSettings}
        >
          <Ionicons name="settings-outline" size={22} color={COLORS.grey} />
        </TouchableOpacity>
...
