...
                style={styles.startEarningButton}
                onPress={onAddMore}
              >
                <Text style={styles.startEarningButtonText}>Add More</Text>
              </TouchableOpacity>
              <TouchableOpacity
                testID="dashboard-withdraw-button"
                style={styles.withdrawButton}
                onPress={onWithdraw}
              >
                <Text style={styles.withdrawButtonText}>Withdraw</Text>
              </TouchableOpacity>
            </View>
...
